@@ -1,0 +1,22 @@
+Name: CMS_2012_PAS_FWD_11_003
+Year: 2011
+Summary: Study of the Underlying Event at Forward Rapidity in Proton-Proton Collisions at the LHC
+Experiment: CMS
+Collider: LHC
+SpiresID: 
+Status: VALIDATED
+Authors:
+ - Samantha Dooling <samantha.dooling@desy.de>
+References: 
+ - CMS-PAS-FWD-11-003
+ - http://cdsweb.cern.ch/record/1434458
+RunInfo:
+   Inelastic events (non-diffractive and diffractive) at $\sqrt{s}$ = 0.9, 2.76 and 7 TeV.
+NumEvents: 1 Mio
+Beams:  [p+, p+]
+Energies: [900, 2760, 7000]
+Description:
+  'Ratio of the energy deposited in the  pseudorapidity range $-6.6 < \eta < -5.2$
+   for events with a charged particle jet with $|\eta|<2$ with respect to the
+   energy in  inclusive events, as a function of charged particle jet transverse
+   momentum for $\sqrt{s}=$0.9, 2.76 and 7 TeV.'
