@@ -131,6 +131,7 @@ dist_pkgdata_DATA = \
   CMS_2012_I1102908.info \
   CMS_2012_I1107658.info \
   CMS_2012_I1184941.info \
+  CMS_2012_PAS_FWD_11_003.info \
   CMS_2012_PAS_QCD_11_010.info \
   CMS_QCD_10_024.info \
   D0_1996_S3214044.info \
