@@ -1,0 +1,21 @@
+# BEGIN PLOT /CMS_2012_PAS_FWD_11_003/d0
+XLabel=Leading charged jet $p_\perp$ [GeV]
+YLabel=$(\mathrm{d}E^\text{hard} / \mathrm{d}\eta) / (\mathrm{d} E^\text{incl} / \mathrm{d}\eta)$
+LegendXPos=0.05
+LogY=0
+# END PLOT
+
+
+# BEGIN PLOT /CMS_2012_PAS_FWD_11_003/d01-x01-y01
+Title=Ratio of energy deposited in $-6.6 < \eta < -5.2$ for $\sqrt{s}=0.9$ TeV
+# END PLOT
+
+# BEGIN PLOT /CMS_2012_PAS_FWD_11_003/d02-x01-y01
+Title=Ratio of energy deposited in $-6.6 < \eta < -5.2$ for $\sqrt{s}=2.76$ TeV
+# END PLOT
+
+# BEGIN PLOT /CMS_2012_PAS_FWD_11_003/d03-x01-y01
+Title=Ratio of energy deposited in $-6.6 < \eta < -5.2$ for $\sqrt{s}=7$ TeV
+LegendXPos=0.45
+LegendYPos=0.4
+# END PLOT
