@@ -1,0 +1,99 @@
+<?xml version="1.0" encoding="ISO-8859-1" ?>
+<!DOCTYPE aida SYSTEM "http://aida.freehep.org/schemas/3.3/aida.dtd">
+<aida version="3.3">
+  <implementation version="1.1" package="FreeHEP"/>
+  <dataPointSet name="d01-x01-y01" dimension="2"
+    path="/REF/CMS_2012_PAS_FWD_11_003" title="energy flow ratio to pt, 0.9 TeV">
+    <dataPoint>
+      <measurement errorPlus="0.5" value="1.5" errorMinus="0.5"/>
+      <measurement errorPlus="0.013615" value="1.03319" errorMinus="0.013615"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="0.5" value="2.5" errorMinus="0.5"/>
+      <measurement errorPlus="0.0143562" value="0.934369" errorMinus="0.0143562"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="1.0" value="4.0" errorMinus="1.0"/>
+      <measurement errorPlus="0.0169606" value="0.852281" errorMinus="0.0169606"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="1.25" value="6.25" errorMinus="1.25"/>
+      <measurement errorPlus="0.0255735" value="0.788704" errorMinus="0.0255735"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="1.25" value="8.75" errorMinus="1.25"/>
+      <measurement errorPlus="0.0305182" value="0.783938" errorMinus="0.0305182"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.5" value="12.5" errorMinus="2.5"/>
+      <measurement errorPlus="0.0306537" value="0.783507" errorMinus="0.0306537"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.0" value="20.0" errorMinus="5.0"/>
+      <measurement errorPlus="0.0389878" value="0.743184" errorMinus="0.0389878"/>
+    </dataPoint>
+    </dataPointSet>
+  <dataPointSet name="d02-x01-y01" dimension="2"
+    path="/REF/CMS_2012_PAS_FWD_11_003" title="energy flow ratio to pt, 2.76 TeV">
+    <dataPoint>
+      <measurement errorPlus="0.5" value="1.5" errorMinus="0.5"/>
+      <measurement errorPlus="0.0142233" value="0.9948763" errorMinus="0.0142233"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="0.5" value="2.5" errorMinus="0.5"/>
+      <measurement errorPlus="0.0166567" value="1.05403" errorMinus="0.0166567"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="1.0" value="4.0" errorMinus="1.0"/>
+      <measurement errorPlus="0.0330071" value="1.06285" errorMinus="0.0330071"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="1.25" value="6.25" errorMinus="1.25"/>
+      <measurement errorPlus="0.0418842" value="1.05258" errorMinus="0.0418842"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="1.25" value="8.75" errorMinus="1.25"/>
+      <measurement errorPlus="0.0448775" value="1.04008" errorMinus="0.0448775"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.5" value="12.5" errorMinus="2.5"/>
+      <measurement errorPlus="0.0425066" value="1.01836" errorMinus="0.0425066"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.0" value="20.0" errorMinus="5.0"/>
+      <measurement errorPlus="0.0432732" value="0.985929" errorMinus="0.0432732"/>
+    </dataPoint>
+    </dataPointSet>
+  <dataPointSet name="d03-x01-y01" dimension="2"
+    path="/REF/CMS_2012_PAS_FWD_11_003" title="energy flow ratio to pt, 7 TeV">
+    <dataPoint>
+      <measurement errorPlus="0.5" value="1.5" errorMinus="0.5"/>
+      <measurement errorPlus="0.0297284" value="0.8715" errorMinus="0.0297284"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="0.5" value="2.5" errorMinus="0.5"/>
+      <measurement errorPlus="0.0184714" value="1.04212" errorMinus="0.0184714"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="1.0" value="4.0" errorMinus="1.0"/>
+      <measurement errorPlus="0.0222113" value="1.19448" errorMinus="0.0222113"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="1.25" value="6.25" errorMinus="1.25"/>
+      <measurement errorPlus="0.0370915" value="1.30589" errorMinus="0.0370915"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="1.25" value="8.75" errorMinus="1.25"/>
+      <measurement errorPlus="0.0461365" value="1.34462" errorMinus="0.0461365"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="2.5" value="12.5" errorMinus="2.5"/>
+      <measurement errorPlus="0.0484821" value="1.34462" errorMinus="0.0484821"/>
+    </dataPoint>
+    <dataPoint>
+      <measurement errorPlus="5.0" value="20.0" errorMinus="5.0"/>
+      <measurement errorPlus="0.0404986" value="1.30869" errorMinus="0.0404986"/>
+    </dataPoint>
+  </dataPointSet>
+</aida>
+
