@@ -1,3 +1,7 @@
+2012-12-14  Hendrik Hoeth <hendrik.hoeth@cern.ch>
+
+	* Added CMS_2012_PAS_FWD_11_003 analysis
+
 2012-12-12  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Correction to jet acceptance in CMS_2011_S9120041, from Sercan Sen: thanks!
